# myak

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
myak/: __init__.py  backfill.py  config.py  export_obsidian.py  indexer.py  mcp_server.py  query.py
templates/: com.myak.export.plist.template  hooks.json
tests/: conftest.py  test_export.py  test_indexer_hook.py  test_query_hook.py
